force-app/main/default/objects/Programa_de_Facturaci_n__c/Programa_de_Facturaci_n__c.object-meta.xml
<CustomObject>
    <label>Programa de Facturación</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Nombre de Programa de Facturación</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Programa de Facturación</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>