force-app/main/default/objects/Programa_de_Facturaci_n__c/fields/Contacto__c.field-meta.xml
<CustomField>
    <fullName>Contacto__c</fullName>
    <formula>Oportunidad__r.Contacto__r.FirstName &amp;&quot; &quot;&amp; Oportunidad__r.Contacto__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contacto</label>
    <type>Text</type>
</CustomField>