force-app/main/default/objects/Programa_de_Facturaci_n__c/fields/Especificador__c.field-meta.xml
<CustomField>
    <fullName>Especificador__c</fullName>
    <formula>TEXT(Oportunidad__r.Especificador__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Especificador</label>
    <type>Text</type>
</CustomField>