force-app/main/default/objects/Programa_de_Facturaci_n__c/fields/Facturaci_n_Estimada__c.field-meta.xml
<CustomField>
    <fullName>Facturaci_n_Estimada__c</fullName>
    <label>Facturación Estimada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>