force-app/main/default/objects/Programa_de_Facturaci_n__c/fields/Fecha__c.field-meta.xml
<CustomField>
    <fullName>Fecha__c</fullName>
    <label>Fecha Estimada de Facturación</label>
    <type>Date</type>
</CustomField>