force-app/main/default/objects/Programa_de_Facturaci_n__c/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Programa de Facturación</relationshipLabel>
    <relationshipName>Programa_de_Facturaci_n</relationshipName>
    <type>Lookup</type>
</CustomField>